--- a/src/proyectosogomez/carrillo/Inicio.form
+++ b/src/proyectosogomez/carrillo/Inicio.form
@@ -40,7 +40,7 @@
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="127" max="32767" attributes="0"/>
+              <EmptySpace pref="119" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -64,7 +64,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Arial Narrow" size="36" style="3"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="NEW 15SD XL EMULATOR"/>
+        <Property name="text" type="java.lang.String" value="NEW 15SD XL SIMULATOR"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jButton1">
